k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blue-green
  name: blue-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-green
  template:
    metadata:
      labels:
        app: blue-green
    spec:
      containers:
        - image: blue-green
          name: blue-green
          ports:
            - name: http
              containerPort: 8050
