k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue-green
  name: blue-green
spec:
  ports:
    - name: http
      port: 8050
      targetPort: http
  selector:
    app: blue-green
  type: ClusterIP
